# buclin-domeggook-crawling-system

./: pyproject.toml  readme.md
projects/: 도매꾹_의류_상품_크롤링_시스템.ipynb
projects/data/sql/: data.sql
